worked on login comp and resolved the problem with the body scrollbar at navigation

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -47,6 +47,14 @@
     transition: all 0.4s;
   }
 
+  &:disabled{
+    cursor: default;
+    opacity: .7;
+    transform:none;
+    box-shadow: none;
+    &::after{display: none;}
+  }
+
   &--white {
     @include btn-color(#777, aliceblue);
   }
